# Unity_KinovaGen3LiteAR

./: .gitignore  README.md
Assets/: WSATestCertificate.pfx
Assets/Materials/: MRTK_Green.mat  MRTK_Red.mat  Purple.mat  SafetyZone.mat  TargetPoseFailed.mat  TargetPoseMaterial.mat  Yellow.mat
Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
Assets/Prefabs/: #_Button.prefab  3 Axis Control.prefab  AR_Numpad.prefab  EndEffector.prefab  HandMenu_Large_UR5.prefab  HandMenu_Panel.prefab  IndexSphere.prefab  TargetPose.prefab  ThumbSphere.prefab  WristSphere.prefab  gen3_lite_gen3_lite_2f.prefab  gen3_lite_gen3_lite_2f_modified.prefab
Assets/Resources/: VuforiaConfiguration.asset
Assets/Scenes/: EyeTracking.unity  EyeTrackingSettings.lighting  Main.unity
Assets/Scripts/: AR_Numpad.cs  AR_PushButton.cs  AngleConversion.cs  ChangeColor.cs  ChangeMaterialColor.cs  DeleteScript.cs  DisplayRobotStatePublisher.cs  DisplayRobotStateSubscriber.cs  DisplayTrajectoryPublisher.cs  DisplayTrajectorySubscriber.cs  EmergencyStopCommandPublisher.cs  EndEffectorPublisher.cs  (+27 more)
Assets/URDF/spot_kinova_description/: CMakeLists.txt  package.xml
Assets/URDF/spot_kinova_description/meshes/: dual_arm_bulkhead_collision.prefab  dual_arm_bulkhead_collision_0.asset
Assets/URDF/spot_kinova_description/scripts/: setup_spot_gen3_lite_envar
Assets/URDF/spot_kinova_description/urdf/: spot_gen3_lite_description.urdf.xacro
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
QCAR/: somedata16
UserSettings/: EditorUserSettings.asset
(+468 files in other folders)
